--- a/Web Interface/index.html
+++ b/Web Interface/index.html
@@ -26,11 +26,13 @@
                     </li>
                 </ul>
             </nav>
+
             <div class="search">
                 <input type="text" placeholder="Search...">
                 <button type="submit"><i class="fa fa-search"></i>
                 </button>
             </div>
+
             <nav class="login-buttons">
                 <ul>
                     <li class="join-now-btn">
@@ -46,7 +48,22 @@
     </header>
     <section class="banner">
         <div class="container">
-
+            <div class="banner-box">
+                <h1>
+                    Learn the best JavaScript tools and frameworks from industry pros.
+                </h1>
+                <h2>
+                    Video tutorials for badass web developers.
+                </h2>
+                <a href="#" class="btn">
+                    Clıck to Start Learnıng
+                </a>
+            </div>
+            <div class="banner-box banner-image">
+                <a href="#">
+                    <img src="img/ImmuateableImmer_Final.png" alt="">
+                </a>
+            </div>
         </div>
     </section>
 
