Web Interface egghead.io

--- a/Web Interface/index.html
+++ b/Web Interface/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <title>Web Interface</title>
+    <title>Web Interface egghead.io</title>
 </head>
 
 <body>
@@ -68,16 +68,148 @@
     </section>
 
     <div class="container">
-        <section></section>
 
-        <section></section>
+        <section class="section1">
+            <div class="lang">
+                <a href="#">
+                    <img src="icons/javascript.png" alt="">
+                    <span class="title">JavaScript</span>
+                    </img>
+                </a>
+                <a href="#">
+                    <img src="icons/react.png" alt="">
+                    <span class="title">React</span>
+                    </img>
+                </a>
+                <a href="#">
+                    <img src="icons/graphql.png" alt="">
+                    <span class="title">GraphQL</span>
+                    </img>
+                </a>
+                <a href="#">
+                    <img src="icons/gatsby.png" alt="">
+                    <span class="title">Gastby</span>
+                    </img>
+                </a>
+                <a href="#">
+                    <img src="icons/css.png" alt="">
+                    <span class="title">CSS</span>
+                    </img>
+                </a>
+                <a href="#">
+                    <img src="icons/vscode.png" alt="">
+                    <span class="title">VS Code</span>
+                    </img>
+                </a>
+            </div>
+            <div class="inner">
+                <h3>
+                    What is egghead?
+                </h3>
+                <p>
+                    egghead is a group of working web development professionals and open source contributors that
+                    provide you with concise, information dense video courses on the best tools in the industry.
+                </p>
+                <p>
+                    We are dedicated to respecting your time. This means that egghead courses get to the point and
+                    deliver knowledge that you can use today. You won't find boring 8 hour courses on egghead, instead
+                    you'll find a wealth of bite-sized courses that pack more information in a fraction of the time.
+                </p>
+            </div>
+        </section>
 
-        <section></section>
+        <section class="section2">
+            <div class="icon">
+                <i class="fa fa-quote-left"></i>
+            </div>
+            <p>
+                If you're a developer, you owe it to yourself to follow @eggheadio. Short, instructional videos on the
+                technologies we use.
+            </p>
+            <div class="user">
+                <img src="https://picsum.photos/200/" alt="">Shaun Cave on Twitter
+            </div>
+        </section>
+
+        <section class="section3">
+            <div class="text">
+                <h3>Learn something new today</h3>
+                <p> Ready to get started? egghead has many free community resource courses for you to start learning
+                    today. Create your free account and choose something to learn. Creating a free account will allow
+                    you to view all of the free courses egghead has to offer as well as tracking your progress as you
+                    learn. </p>
+                <a href="#" class="btn color-green">Clıck to Start Learnıng</a>
+            </div>
+            <div class="image">
+                <img src="img/image.png" alt="">
+            </div>
+        </section>
     </div>
 
     <footer class="footer">
         <div class="container">
 
+            <div class="logo">
+                <a href="#">
+                    <img src="img/logo.svg" alt="">
+                </a>
+            </div>
+
+            <div class="footer-nav">
+                <nav>
+                    <h6>CONTENT</h6>
+                    <ul>
+                        <li>
+                            <a href="#">Browse</a>
+                        </li>
+                        <li>
+                            <a href="#">Courses</a>
+                        </li>
+                        <li>
+                            <a href="#">Lessons</a>
+                        </li>
+                        <li>
+                            <a href="#">Podcats</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav>
+                    <h6>ABOUT</h6>
+                    <ul>
+                        <li>
+                            <a href="#">Pricing</a></li>
+                        <li>
+                            <a href="#">Instructors</a></li>
+                        <li>
+                            <a href="#">Stories</a>
+                        </li>
+                        <li>
+                            <a href="#">Team</a>
+                        </li>
+                        <li>
+                            <a href="#">Store</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <div class="search">
+                    <h6>
+                        Search for Lessons and Courses
+                    </h6>
+                    <form action="">
+                        <input type="text" placeholder="e.g. JavaScript, React">
+                        <button type="button">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <div class="copyright">
+                <a href="#">Terms & Conditions</a>
+                <span class="text">
+                    &copy; egghead.io 
+                </span>
+            </div>
         </div>
     </footer>
 
