--- a/Basic Dashboards/index.html
+++ b/Basic Dashboards/index.html
@@ -70,6 +70,45 @@
                         <i class="fa-solid fa-chevron-right"></i>
                     </a>
                 </div>
+                <div class="projects">
+                    <a href="#" class="box active">
+                        <span class="box-top">
+                            <i class="fa fa-folder"></i>
+                            <span class="box-shared">
+                                <img src="https://picsum.photos/200/300" alt="Paylaşan kişi fotoğrafları">
+                                <img src="https://picsum.photos/200/300" alt="Paylaşan kişi fotoğrafları">
+                                <img src="https://picsum.photos/200/300" alt="Paylaşan kişi fotoğrafları">
+                            </span>
+                        </span>
+                        <span class="box-title">
+                            <span class="name">Nucleus Tech</span>
+                            <span class="task">16 tasks</span>
+                        </span>
+                        <span class="box-bar">
+                            <span style="width: 70%;" title="70%"></span>
+                        </span>
+                    </a>
+                    <a href="#" class="box active">
+                        <span class="box-top">
+                            <i class="fa fa-folder-plus"></i>
+                            <span class="box-shared">
+                                <img src="https://picsum.photos/200/300" alt="Paylaşan kişi fotoğrafları">
+                                <img src="https://picsum.photos/200/300" alt="Paylaşan kişi fotoğrafları">
+                            </span>
+                        </span>
+                        <span class="box-title">
+                            <span class="name">Summit AI</span>
+                            <span class="task">5 tasks</span>
+                        </span>
+                        <span class="box-bar">
+                            <span style="width: 90%;" title="90%"></span>
+                        </span>
+                    </a>
+                    <a href="#" class="box empty">
+                        <i class="fa fa-plus"></i>
+                        <span class="text">Add New Project</span>
+                    </a>
+                </div>
             </div>
             <div class="inner-box">
                 <div class="content-title">
@@ -77,6 +116,76 @@
                     <a href="#">View All
                         <i class="fa-solid fa-chevron-right"></i>
                     </a>
+                </div>
+                <div class="recents">
+                    <ul>
+                        <li>
+                            <a href="#" class="link">
+                                <i class="fa fa-folder"></i>
+                                Design Assets
+                            </a>
+                            <div class="visibility">Only You
+                            </div>
+                            <div class="size">
+                                2.4 GB
+                            </div>
+                            <a href="#" class="more">
+                                <i class="fa-solid fa-ellipsis"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">
+                                <i class="fa fa-folder"></i>
+                                Team Photos
+                            </a>
+                            <div class="visibility">5 Members
+                            </div>
+                            <div class="size">1.9 GB
+                            </div>
+                            <a href="#" class="more">
+                                <i class="fa-solid fa-ellipsis"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">
+                                <i class="fa fa-music icon"></i>
+                                Levitating.mp3
+                            </a>
+                            <div class="visibility">Only You
+                            </div>
+                            <div class="size">2.9 MB
+                            </div>
+                            <a href="#" class="more">
+                                <i class="fa-solid fa-ellipsis"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">
+                                <i class="fa fa-microphone icon"></i>
+                                Never.mp3
+                            </a>
+                            <div class="visibility">5 Members
+                            </div>
+                            <div class="size">5.8 MB
+                            </div>
+                            <a href="#" class="more">
+                                <i class="fa-solid fa-ellipsis"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">
+                                <img src="https://picsum.photos/200" alt="Picsum Foto'dan rastgele seçim">
+                                Picsum Photos
+                            </a>
+                            <div class="visibility">Only You
+                            </div>
+                            <div class="size">516.8 KB
+                            </div>
+                            <a href="#" class="more">
+                                <i class="fa-solid fa-ellipsis"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
