--- a/Basic Dashboards/index.html
+++ b/Basic Dashboards/index.html
@@ -191,8 +191,117 @@
         </div>
 
         <div class="rightbar">
+            <div class="bar">
+                <a class="bar active" href="#">
+                    <span class="bar-notification">
+                        <i class="fa-regular fa-bell"></i>
+                    </span>
+                    <span class="bar-profile">
+                        <img src="https://picsum.photos/200/300" alt="Rightbar profil fotoğrafı">
+                    </span>
+                    <span class="bar-profile-name">
+                        <p>
+                            Burak
+                        </p>
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </span>
+                </a>
+
+            </div>
+
+            <div class="rigtbar-inner">
+                <div class="content-title">
+                    <h4>Activities</h4>
+                </div>
+            </div>
+
+            <div class="rightbar-dot">
+                <div class="card">
+                    <div class="activities">
+                        <p>
+                            <a href="#" class="bar-active">
+                                <span class="bar-top">
+                                    <i class="fa-regular fa-circle-dot"></i>
+                                    <span class="paragraph">
+                                        <p>
+                                            <b>David Lee</b> shared 2 illustrations in the <b>Nucleus Tech</b>
+                                            project
+                                        </p>
+                                        <p>
+                                    </span>
+                                    <span class="rigtbar-photo">
+                                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
+                                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
+                                    </span>
+                                    <span>
+                                        1h
+                                    </span>
+                                </span>
+                            </a>
+                        </p>
+
+                        <p>
+                            <a href="#" class="bar-active">
+                                <span class="bar-top">
+                                    <i class="fa-regular fa-circle-dot"></i>
+                                    <span class="paragraph">
+                                        <p>
+                                            <b>Brian Hallen</b> replied to your comment
+                                        </p>
+                                        <p>
+                                    </span>
+                                    <span>
+                                        2h
+                                    </span>
+                                </span>
+                            </a>
+                        </p>
+
+                        <p>
+                            <a href="#" class="bar-active">
+                                <span class="bar-top">
+                                    <i class="fa-regular fa-circle-dot"></i>
+                                    <span class="paragraph">
+                                        <p>
+                                            <b>David Lee</b> added <b>Robin Bright</b> to he <b>Summit AI</b> project.
+                                        </p>
+                                        <p>
+                                    </span>
+                                    <span>
+                                        4h
+                                    </span>
+                                </span>
+                            </a>
+                        </p>
+
+
+                        <p>
+                            <a href="#" class="bar-active">
+                                <span class="bar-top">
+                                    <i class="fa-regular fa-circle-dot"></i>
+                                    <span class="paragraph">
+                                        <p>
+                                            <b>You</b> deleted 20 files from the <b>Summit AI</b> project
+                                        </p>
+                                    </span>
+                                    <span>
+                                        8h
+                                    </span>
+                                </span>
+                            </a>
+                        </p>
+
+                    </div>
+
+                </div>
+            </div>
+
 
         </div>
+
+    </div>
     </div>
 
 </body>
