--- a/Basic Dashboards/index.html
+++ b/Basic Dashboards/index.html
@@ -197,7 +197,53 @@
                         <i class="fa-regular fa-bell"></i>
                     </span>
                     <span class="bar-profile">
-                        <img src="https://picsum.photos/200/300" alt="Rightbar profil fotoğrafı">
+                        <img src="https://picsum.photos/48/48" alt="Rightbar profil fotoğrafı">
+                    </span>
+                    <span class="bar-profile-name">
+                        <p>
+                            Burak
+                        </p>
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </span>
+                </a>
+
+            </div>
+
+            <div class="activities-section">
+                <div class="header">
+                    <h4>Activities</h4>
+                </div>
+                <div class="activity-1">
+                    
+                    <div class="content">
+                        <i class="fa-regular fa-circle-dot"></i>
+                        <p class="not-1"><b>David Lee</b> shared 2 illustrations
+                            in the <b>Nucleus Tech</b> project.</p>
+                        <p class="not-2">1h</p>
+                    </div>
+                    <div class="images">
+                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
+                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
+                    </div>
+                </div>
+                <div class="activity-2"></div>
+                <div class="activity-3"></div>
+                <div class="activity-4"></div>
+            </div>
+
+
+
+
+
+            <!-- <div class="bar">
+                <a class="bar active" href="#">
+                    <span class="bar-notification">
+                        <i class="fa-regular fa-bell"></i>
+                    </span>
+                    <span class="bar-profile">
+                        <img src="https://picsum.photos/48/48" alt="Rightbar profil fotoğrafı">
                     </span>
                     <span class="bar-profile-name">
                         <p>
@@ -296,7 +342,7 @@
                     </div>
 
                 </div>
-            </div>
+            </div> -->
 
 
         </div>
