--- a/Basic Dashboards/index.html
+++ b/Basic Dashboards/index.html
@@ -216,138 +216,49 @@
                     <h4>Activities</h4>
                 </div>
                 <div class="activity-1">
-                    
+
                     <div class="content">
                         <i class="fa-regular fa-circle-dot"></i>
                         <p class="not-1"><b>David Lee</b> shared 2 illustrations
                             in the <b>Nucleus Tech</b> project.</p>
                         <p class="not-2">1h</p>
                     </div>
-                    <div class="images">
-                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
-                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
+
+                    <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
+
+                    <img class="images-2" src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
+                </div>
+                <div class="activity-2">
+                    <div class="content">
+                        <i class="fa-regular fa-circle-dot"></i>
+                        <p class="not-1"><b>Brian Hallen</b> replied to your comment.</p>
+                        <p class="not-2">2h</p>
                     </div>
                 </div>
-                <div class="activity-2"></div>
-                <div class="activity-3"></div>
-                <div class="activity-4"></div>
-            </div>
-
-
-
-
-
-            <!-- <div class="bar">
-                <a class="bar active" href="#">
-                    <span class="bar-notification">
-                        <i class="fa-regular fa-bell"></i>
-                    </span>
-                    <span class="bar-profile">
-                        <img src="https://picsum.photos/48/48" alt="Rightbar profil fotoğrafı">
-                    </span>
-                    <span class="bar-profile-name">
-                        <p>
-                            Burak
-                        </p>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </span>
-                </a>
-
-            </div>
-
-            <div class="rigtbar-inner">
-                <div class="content-title">
-                    <h4>Activities</h4>
-                </div>
-            </div>
-
-            <div class="rightbar-dot">
-                <div class="card">
-                    <div class="activities">
-                        <p>
-                            <a href="#" class="bar-active">
-                                <span class="bar-top">
-                                    <i class="fa-regular fa-circle-dot"></i>
-                                    <span class="paragraph">
-                                        <p>
-                                            <b>David Lee</b> shared 2 illustrations in the <b>Nucleus Tech</b>
-                                            project
-                                        </p>
-                                        <p>
-                                    </span>
-                                    <span class="rigtbar-photo">
-                                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
-                                        <img src="https://picsum.photos/48/48" alt="Rightbar paragraf resmi">
-                                    </span>
-                                    <span>
-                                        1h
-                                    </span>
-                                </span>
-                            </a>
-                        </p>
-
-                        <p>
-                            <a href="#" class="bar-active">
-                                <span class="bar-top">
-                                    <i class="fa-regular fa-circle-dot"></i>
-                                    <span class="paragraph">
-                                        <p>
-                                            <b>Brian Hallen</b> replied to your comment
-                                        </p>
-                                        <p>
-                                    </span>
-                                    <span>
-                                        2h
-                                    </span>
-                                </span>
-                            </a>
-                        </p>
-
-                        <p>
-                            <a href="#" class="bar-active">
-                                <span class="bar-top">
-                                    <i class="fa-regular fa-circle-dot"></i>
-                                    <span class="paragraph">
-                                        <p>
-                                            <b>David Lee</b> added <b>Robin Bright</b> to he <b>Summit AI</b> project.
-                                        </p>
-                                        <p>
-                                    </span>
-                                    <span>
-                                        4h
-                                    </span>
-                                </span>
-                            </a>
-                        </p>
-
-
-                        <p>
-                            <a href="#" class="bar-active">
-                                <span class="bar-top">
-                                    <i class="fa-regular fa-circle-dot"></i>
-                                    <span class="paragraph">
-                                        <p>
-                                            <b>You</b> deleted 20 files from the <b>Summit AI</b> project
-                                        </p>
-                                    </span>
-                                    <span>
-                                        8h
-                                    </span>
-                                </span>
-                            </a>
-                        </p>
-
+                <div class="activity-3">
+                    <div class="content">
+                        <i class="fa-regular fa-circle-dot"></i>
+                        <p class="not-1"><b>David Lee</b> added <b>Robin Bright</b> to he <b>Summit AI</b> project</p>
+                        <p class="not-2">4h</p>
                     </div>
-
                 </div>
-            </div> -->
+                <div class="activity-4">
+                    <div class="content">
+                        <i class="fa-regular fa-circle-dot"></i>
+                        <p class="not-1"><b>You</b> deleted 20 files from the <b>Summit AI</b> project</p>
+                        <p class="not-2">8h</p>
+                    </div>
+                </div>
 
+            </div>
+
+            <div class="refer-friend-card">
+                <h4 class="card">Refer a friend!</h4>
+                <span class="text">And get awesome rewards</span>
+                <img class="photos" src="https://picsum.photos/167/196" alt="Rightbar alt fotoğrafı">
+            </div>
 
         </div>
-
-    </div>
     </div>
 
 </body>
