--- a/Demo & Download/index.html
+++ b/Demo & Download/index.html
@@ -12,13 +12,22 @@
 </head>
 <body>
     
-    <div class="component--pricing-table">
+    <div class="component--pricing-list">
         <header>
             <h3>Explore current top deals</h3>
             <p>
-                
+                Check out our deals across our product range.
             </p>
         </header>
+        <ul class="pricing-list">
+            <li><a href="#">
+                <span class="title">Get .biz domain 45% off</span>
+                <span class="price">$4.88/yr</span>
+                <span class="btn">Get started
+                    <img src="img/right-long-solid.svg" alt="">
+                </span>
+            </a></li>
+        </ul>
     </div>
 
 </body>
