--- a/Demo & Download/index.html
+++ b/Demo & Download/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <title>Demo & Download</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+
     <div class="component--pricing-list">
         <header>
             <h3>Explore current top deals</h3>
@@ -21,14 +23,42 @@
         </header>
         <ul class="pricing-list">
             <li><a href="#">
-                <span class="title">Get .biz domain 45% off</span>
-                <span class="price">$4.88/yr</span>
-                <span class="btn">Get started
-                    <img src="img/right-long-solid.svg" alt="">
-                </span>
-            </a></li>
+                    <span class="title">Get .biz domain 45% off</span>
+                    <span class="price">$4.88/yr</span>
+                    <span class="btn">Get started
+                        <img src="img/right-long-solid.svg" alt="">
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="title">.IO</span>
+                    <span class="price">$28.88/yr
+                        <span>Instead of $32.89/yr</span>
+                    </span>
+                    <span class="btn">Get started
+                        <img src="img/right-long-solid.svg" alt="">
+                    </span>
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <span class="title">.SO</span>
+                    <span class="price">$35.88/yr
+                        <span>Instead of $64.88/yr</span>
+                    </span>
+                    <span class="btn">Get started
+                        <img src="img/right-long-solid.svg" alt="">
+                    </span>
+                </a>
+            </li>
         </ul>
+        <div class="action">
+            <a href="#">View More</a>
+        </div>
     </div>
 
 </body>
+
 </html>
