--- a/Demo & Download/index.html
+++ b/Demo & Download/index.html
@@ -22,34 +22,34 @@
             </p>
         </header>
         <ul class="pricing-list">
-            <li><a href="#">
-                    <span class="title">Get .biz domain 45% off</span>
+            <li>
+                <a href="#">
+                    <span class="title domain-title">Get .biz domain 45% off</span>
                     <span class="price">$4.88/yr</span>
                     <span class="btn">Get started
-                        <img src="img/right-long-solid.svg" alt="">
+                        <i class="fa-light fa-right-long"></i>
                     </span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <span class="title">.IO</span>
+                    <span class="title domain-title">.IO</span>
                     <span class="price">$28.88/yr
                         <span>Instead of $32.89/yr</span>
                     </span>
                     <span class="btn">Get started
-                        <img src="img/right-long-solid.svg" alt="">
                     </span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
-                    <span class="title">.SO</span>
+                    <span class="title domain-title">.SO</span>
                     <span class="price">$35.88/yr
                         <span>Instead of $64.88/yr</span>
                     </span>
                     <span class="btn">Get started
-                        <img src="img/right-long-solid.svg" alt="">
+
                     </span>
                 </a>
             </li>
