--- a/Demo & Download/index.html
+++ b/Demo & Download/index.html
@@ -22,17 +22,19 @@
             </p>
         </header>
         <ul class="pricing-list">
-            <li>
+            <li class="active">
                 <a href="#">
+                    
                     <span class="title domain-title">Get .biz domain 45% off</span>
                     <span class="price">$4.88/yr</span>
                     <span class="btn">Get started
-                        <i class="fa-light fa-right-long"></i>
                     </span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#"><span class="best-price">
+                    Best price
+                </span>
                     <span class="title domain-title">.IO</span>
                     <span class="price">$28.88/yr
                         <span>Instead of $32.89/yr</span>
@@ -49,7 +51,6 @@
                         <span>Instead of $64.88/yr</span>
                     </span>
                     <span class="btn">Get started
-
                     </span>
                 </a>
             </li>
